# motor

./: .editorconfig  .gitignore  Makefile.am  configure.ac
intl/: Makefile.am
kkconsui/src/: Makefile.am  texteditor.cc
kkstrtext/: kkstrtext.cc
kksystr/src/: Makefile.am
parser/: Makefile.am
parser/include/: strfn.h
parser/src/: Makefile.am
share/: Makefile.am
src/: Makefile.am  motorcommon.h
src/configuration/: Makefile.am
src/debugger/: Makefile.am  motordebugger.cc
src/executor/: Makefile.am
src/grepper/: Makefile.am
src/manager/: Makefile.am
src/project/: Makefile.am
src/tagbrowser/: Makefile.am
src/ui/: Makefile.am
src/ui/ncurses/: Makefile.am  ncursesui.cc  uitagbrowser.cc  uivcs.cc
src/vcs/: Makefile.am
