noinst_LIBRARIES = libintl.a

libintl_a_SOURCES = bindtextdom.c dcgettext.c dcigettext.c dcngettext.c \
    dgettext.c dngettext.c explodename.c finddomain.c gettext.c intl-compat.c \
    l10nflist.c loadmsgcat.c localcharset.c localealias.c localename.c log.c \
    ngettext.c os2compat.c osdep.c plural-exp.c plural.c relocatable.c \
    textdomain.c
